// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImportQuickPickItem should contain the declaration info 1`] = `
Object {
  "declaration": ClassDeclaration {
    "accessors": Array [],
    "end": undefined,
    "isExported": true,
    "methods": Array [],
    "name": "class",
    "properties": Array [],
    "start": undefined,
  },
  "from": "/server/indices",
}
`;

exports[`ImportQuickPickItem should set the correct fields 1`] = `
ImportQuickPickItem {
  "declarationInfo": Object {
    "declaration": ClassDeclaration {
      "accessors": Array [],
      "end": undefined,
      "isExported": true,
      "methods": Array [],
      "name": "class",
      "properties": Array [],
      "start": undefined,
    },
    "from": "/server/indices",
  },
  "description": "/server/indices",
  "label": "class",
}
`;
